Don't really know what fixed it but seems like flickering on flip is gone

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -45,7 +45,7 @@ footer {
 button,
 input {
   font-family: "Nunito", sans-serif;
-  font-weight: 700;
+  font-weight: 800;
 }
 
 button:focus {
@@ -108,15 +108,19 @@ a {
   grid-template-rows: 9em 9em 9em 9em;
   grid-gap: 1.2vw;
   cursor: pointer;
+  perspective: 600px;
 }
 
 .card {
   position: relative;
-  -webkit-transition: all 0.28s cubic-bezier(0.3, 1.06, 1, 1.26);
+  /* -webkit-transition: all 0.28s cubic-bezier(0.3, 1.06, 1, 1.26);
   -moz-transition: all 0.28s cubic-bezier(0.3, 1.06, 1, 1.26);
   -o-transition: all 0.28s cubic-bezier(0.3, 1.06, 1, 1.26);
-  transition: all 0.28s cubic-bezier(0.3, 1.06, 1, 1.26);
-  -webkit-transform-style: preserve-3d;
+  transition: all 0.28s cubic-bezier(0.3, 1.06, 1, 1.26); */
+  -webkit-transition: all 0.28s ease-in-out;
+  -moz-transition: all 0.28s ease-in-out;
+  -o-transition: all 0.28s ease-in-out;
+  transition: all 0.28s ease-in-out;
   -moz-transform-style: preserve-3d;
   -o-transform-style: preserve-3d;
   transform-style: preserve-3d;
@@ -124,6 +128,7 @@ a {
   background-position: left;
   background-repeat: no-repeat;
   background-size: 700%;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .back,
@@ -508,7 +513,7 @@ TABLET PORTRAIT
     place-items: center;
   }
   .logo img {
-    width: 12em;
+    width: 10em;
   }
 }
 
